[gd_scene load_steps=9 format=2]

[ext_resource path="res://DraggablePopup.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/icon_darker.png" type="Texture" id=2]
[ext_resource path="res://Assets/icon_brighter.png" type="Texture" id=3]
[ext_resource path="res://Assets/icon_duplicate_layer.png" type="Texture" id=4]
[ext_resource path="res://Assets/icon_down_arrow.png" type="Texture" id=5]
[ext_resource path="res://Tools/MyColorPicker/MyColorPickerButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/icon_up_arrow.png" type="Texture" id=7]
[ext_resource path="res://Settings/ColorSettingPopup.gd" type="Script" id=8]

[node name="ColorSettingPopup" type="Control"]
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DraggablePopup" parent="." instance=ExtResource( 1 )]
visible = true
margin_right = 346.0
margin_bottom = 138.0

[node name="GridContainer" type="GridContainer" parent="DraggablePopup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorPickerButton" parent="DraggablePopup/GridContainer" instance=ExtResource( 6 )]
margin_right = 160.0
margin_bottom = 36.0

[node name="DuplicateButton" type="Button" parent="DraggablePopup/GridContainer"]
margin_left = 164.0
margin_right = 324.0
margin_bottom = 36.0
rect_min_size = Vector2( 160, 36 )
text = "Duplicate"
icon = ExtResource( 4 )
expand_icon = true

[node name="DarkenButton" type="Button" parent="DraggablePopup/GridContainer"]
margin_top = 40.0
margin_right = 160.0
margin_bottom = 76.0
rect_min_size = Vector2( 160, 36 )
text = "Darken"
icon = ExtResource( 2 )
expand_icon = true

[node name="BrightenButton" type="Button" parent="DraggablePopup/GridContainer"]
margin_left = 164.0
margin_top = 40.0
margin_right = 324.0
margin_bottom = 76.0
rect_min_size = Vector2( 160, 36 )
text = "Brighten"
icon = ExtResource( 3 )
expand_icon = true

[node name="ToUpButton" type="Button" parent="DraggablePopup/GridContainer"]
margin_top = 80.0
margin_right = 160.0
margin_bottom = 116.0
rect_min_size = Vector2( 160, 36 )
text = "To Up"
icon = ExtResource( 7 )
expand_icon = true

[node name="ToDownButton" type="Button" parent="DraggablePopup/GridContainer"]
margin_left = 164.0
margin_top = 80.0
margin_right = 324.0
margin_bottom = 116.0
rect_min_size = Vector2( 160, 36 )
text = "To Down"
icon = ExtResource( 5 )
expand_icon = true

[connection signal="color_changed" from="DraggablePopup/GridContainer/ColorPickerButton" to="." method="_on_ColorPickerButton_color_changed"]
[connection signal="pressed" from="DraggablePopup/GridContainer/DuplicateButton" to="." method="_on_DuplicateButton_pressed"]
[connection signal="pressed" from="DraggablePopup/GridContainer/DarkenButton" to="." method="_on_DarkenButton_pressed"]
[connection signal="pressed" from="DraggablePopup/GridContainer/BrightenButton" to="." method="_on_BrightenButton_pressed"]
[connection signal="pressed" from="DraggablePopup/GridContainer/ToUpButton" to="." method="_on_ToUpButton_pressed"]
[connection signal="pressed" from="DraggablePopup/GridContainer/ToDownButton" to="." method="_on_ToDownButton_pressed"]
